packages/@lwc/ssr-compiler/src/__tests__/fixtures/wire/errors/throws-when-config-is-not-object-expression/modules/x/wire/wire.js
import { wire, LightningElement } from 'lwc';
import { Adapter } from 'x/adapter';
export default class Test extends LightningElement {
    @wire(Adapter, 42)
    wiredFoo;
}
